Bugfixes: – Wave image path hotfix – Remove console.log – Update release url to trinity-alpha.iota.org – Onboarding narrow layout bugfixes

--- a/src/desktop/src/ui/components/list.css
+++ b/src/desktop/src/ui/components/list.css
@@ -195,7 +195,7 @@
 
     &.busy {
         pointer-events: none;
-        color: var(--body-hover);
+        color: var(--body-alt);
     }
 
     &.loading {
